# vk_practice_masscan

./: Cargo.toml  README.md  diagram.mmd  example.config.toml
src/: main.rs  scanner.rs
src/scanner/: config.rs  mod.rs  notifier.rs  result.rs
