[package]
name = "masscan"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
env_logger = "0.11.10"
futures = "0.3.32"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.51.0", features = ["full"] }
tokio-cron-scheduler = { version = "0.15.1", features = ["signal"] }
toml = "1.1.2"
